# radis

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  KNOWLEDGE.md  LICENSE  README.md  TODO.md  cli.py  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.observability.yml.example  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.watch.yml  example.env  globals.d.ts  index.html  manage.py  mkdocs.yml  package-lock.json  pyproject.toml  sitemap.xml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  enable-venv-in-vscode.sh  postCreateCommand.sh
.github/: renovate.json
.github/workflows/: ci.yml  deploy_mkdocs.yml  publish-client.yml
Backups/: index.html
Maintenance/: index.html
adit_radis_shared/: .gitrepo
assets/css/: slideshow.css
compose/: docker-compose.base.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml
compose/llamacpp/: llamacpp.Dockerfile
compose/rabbitmq/: rabbitmq.conf
dev-docs/architecture/: index.html
dev-docs/contributing/: index.html
docs/: Backups.md  Maintenance.md  index.md
docs/dev-docs/: architecture.md  contributing.md
docs/user-docs/: admin-guide.md  getting-started.md  user-guide.md
notebooks/: generate_reports.ipynb  llamacpp.ipynb  misc.ipynb  openai.ipynb  openai_client.ipynb  opensearch.ipynb  opensearch_sandbox.ipynb  postgresql.conf  radis_api.ipynb  test_llamacpp_server.ipynb  vespa.ipynb
radis/: asgi.py  celery.py  conftest.py  urls.py
radis-client/: README.md  pyproject.toml
radis-client/notebooks/: radis_client.ipynb
radis-client/radis_client/: __init__.py  client.py
radis-client/radis_client/utils/: dev_helpers.py  testing_helpers.py
radis-client/tests/: test_client.py  test_client_contract.py
radis/accounts/: backends.py
radis/api/: site.py  views.py
radis/chats/: admin.py  apps.py  factories.py  forms.py  grammars.py  models.py  prompts.py  tables.py  urls.py  views.py
radis/collections/: apps.py  factories.py  filters.py  models.py  tables.py  urls.py  utils.py  views.py
radis/core/: admin.py  apps.py  constants.py  date_formats.py  factories.py  filters.py  form_fields.py  forms.py  layouts.py  middlewares.py  mixins.py  models.py  processors.py  site.py  tables.py  tasks.py  types.py  urls.py  validators.py  views.py  widgets.py  workers.py
radis/extractions/: admin.py  apps.py  constants.py  factories.py  filters.py  forms.py  mixins.py  models.py  processors.py  site.py  tables.py  tasks.py  urls.py  views.py
radis/inbox/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
radis/labels/: admin.py  admin_views.py  apps.py  constants.py  factories.py  forms.py  labeling.py  models.py  processors.py  prompts.py  query.py  schemas.py  scope.py  services.py  signals.py  site.py  tables.py  tasks.py  throttled_client.py  urls.py  views.py
radis/notes/: apps.py  factories.py  filters.py  models.py  urls.py  views.py
radis/opensearch/: apps.py  client.py  mappings.py  providers.py  tasks.py
radis/parade_search/: apps.py  models.py  providers.py  signals.py
radis/pgsearch/: admin.py  apps.py  models.py  providers.py  signals.py  tasks.py
radis/rag/: admin.py  apps.py  factories.py  filters.py  forms.py  mixins.py  models.py  processors.py  site.py  tables.py  tasks.py  urls.py  views.py
radis/ragsearch/: admin.py  apps.py  models.py  rag.py  serializers.py  urls.py  views.py
radis/report_generator/: __init__.py  apps.py  forms.py  prompts.py  urls.py  views.py
radis/reports/: 0013_optimize_reports_report.py  admin.py  apps.py  factories.py  filters.py  forms.py  models.py  signals.py  site.py  tasks.py  urls.py  views.py
radis/sandbox/: apps.py
radis/search/: apps.py  factories.py  forms.py  layout.py  layouts.py  models.py  serializers.py  site.py  urls.py  views.py
radis/settings/: base.py  development.py  production.py  test.py
radis/subscription/: apps.py  forms.py  models.py  (+3 more)
samples/: reports_de.json  reports_en.json
scripts/: radis-entrypoint.sh
search/: search_index.json
vllm/: Dockerfile  requirements.txt  run_vllm.sh
(+561 files in other folders)
