[tool.poetry]
name = "radis"
version = "0.1.0"
description = "RADIS (Radiology Report Archive and Discovery System) is an application to archive, query and collect radiology reports."
authors = ["medihack <kai.schlamp@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
adit-radis-shared = { git = "https://github.com/openradx/adit-radis-shared.git", rev = "v0.6.8" }
adrf = "^0.1.4"
aiofiles = "^24.1.0"
asyncinotify = "^4.0.1"
channels = "^4.0.0"
crispy-bootstrap5 = "^2024.2"
cryptography = "^43.0.0"
daphne = "^4.1.0"
Django = "^5.0.4"
django-crispy-forms = "^2.0"
django-dbbackup = "^4.0.2"
django-environ = "^0.11.2"
django-extensions = "^3.1.5"
django-filter = "^24.2"
django-formtools = "^2.5.1"
django-htmx = "^1.14.0"
django-loginas = "^0.3.9"
django-registration-redux = "^2.10"
django-revproxy = { git = "https://github.com/jazzband/django-revproxy.git" }
django-tables2 = "^2.3.3"
djangorestframework = "^3.13.1"
humanize = "^4.0.0"
Markdown = "^3.3.7"
openai = "^1.12.0"
openpyxl = "^3.1.2"
pandas = "^2.0.1"
pebble = "^5.0.7"
procrastinate = { extras = ["django"], version = "^2.8.0" }
psycopg = { extras = ["binary"], version = "^3.1.13" }
pyparsing = "^3.1.2"
python = ">=3.12,<4.0"
toml = "^0.10.2"
Twisted = { extras = ["tls", "http2"], version = "^24.3.0" }
wait-for-it = "^2.2.2"
watchfiles = "^0.24.0"
whitenoise = "^6.0.0"
django-betterforms = "^2.0.0"
xlsxwriter = "^3.2.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"
django-browser-reload = "^1.11.0"
django-debug-permissions = "^1.0.0"
django-debug-toolbar = "^4.1.0"
django-stubs = "^5.0.4"
django-test-migrations = "^1.3.0"
djangorestframework-stubs = "^3.15.0"
djlint = "^1.19.16"
factory-boy = "^3.1.0"
Faker = "^28.1.0"
invoke = "^2.1.2"
ipykernel = "^6.29.2"
ipython = "^8.1.1"
nest-asyncio = "^1.5.6"
pydicom = "^2.4.3"
pyright = "^1.1.336"
pytest = "^8.1.1"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
pytest-only = "^2.0.0"
pytest-picked = "^0.5.0"
pytest-playwright = "^0.5.0"
pytest-timeout = "^2.1.0"
pytest-watch = "^4.2.0"
python-dotenv = "^1.0.0"
pywatchman = "^2.0.0"
requests = "^2.27.1"
ruff = "^0.6.3"
tiktoken = "^0.7.0"
time-machine = "^2.1.0"
tqdm = "^4.66.2"

[tool.pyright]
ignore = ["**/migrations", "**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true
reportWildcardImportFromLibrary = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "radis.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["radis"]
log_cli = 0
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["integration: mark a test as an integration test."]
filterwarnings = [
    # We already fixed this, so we only need to remove this ignore with next major version of factory boy
    "ignore:.*Factory._after_postgeneration will stop saving the instance:DeprecationWarning",
    "ignore:'cgi' is deprecated:DeprecationWarning",
    'ignore:.*use of fork\(\) may lead to deadlocks.*:DeprecationWarning',
]
timeout = 60

[tool.coverage.run]
branch = true
source = ["radis"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
exclude = ["migrations"]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[tool.djlint]
profile = "django"
max_line_length = 120
ignore = "H021,H030,H031,T002"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
